== 19/Aug/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b99.zip V1.6-b99]  ==

''' Jandy '''

Implement OUTPUT functions to support the output controls.  Resolves [ticket:754]
Ensure PUMP and SPA units are correctly queried on startup. Resolves [ticket:757]
Jandy now includes error text in the log file. Resolved [ticket:756]

''' Advantage Air '''

The SYS message is now correctly interpreted (as per updated docs received from Advantage Air). Resolves [ticket:758]

== 10/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b98.zip V1.6-b98]  ==

''' Jandy '''

Removed polling, more selective error reporting

== 1/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b97.zip V1.6-b97]   [attachment:wiki:SoftwareReleases:eLife-1.6b97-libs.zip Libs-V1.6b97]  ==

Resolved error messages when adding duplicate ALARM devices for the Comfort configuration. [ticket:753]
The display_name that has been used with the device with key 00 is the display_name that flash should send arm messages too.

For example
{{{
        <ALARM KEY="00" DISPLAY_NAME="ALARM"/>
}}}                     
Resolves comfort alarm [ticket:695]

Added comfort zone name support, to be used the integrator must add an ALERT_ZONES parameter table, otherwise the zone number will be
reported.

For example
{{{
   <CATALOGUE NAME="ALERT_ZONES">
        <ITEM CODE="01" VALUE="Front Wall"/>
    </CATALOGUE>
    
    <PARAMETERS>
        <ITEM NAME="ALERT_ZONES" VALUE="ALERT_ZONES" />
    </PARAMETERS>
}}}


''' Serial '''

Resolved port not found error [ticket:752]

== 30/Jun/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b96.zip V1.6-b96]  ==

''' Jandy '''

Added Jandy support [ticket:481]

See ServerDocs/JandyModel for details.


== 12/Jun/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b95.zip V1.6-b95]  [attachment:wiki:SoftwareReleases:eLife-1.6b95-libs.zip Libs-V1.6b95] ==

''' Comfort '''

Further work to resolve issue [ticket:750]

''' Macro '''
